--- a/.github/workflows/replace_readme.yml
+++ b/.github/workflows/replace_readme.yml
@@ -12,8 +12,8 @@ on:
 
 env:
   # change env here
-  GITHUB_NAME: yihong0618
-  GITHUB_EMAIL: zouzou0208@gmail.com
+  GITHUB_NAME: phh95 
+  GITHUB_EMAIL: 602646761@qq.com   
 
 jobs:
   sync:
